--- a/default.conf
+++ b/default.conf
@@ -10,11 +10,10 @@ server {
     }
     
     location /ws {
-        set $is_ws 0;
         if ($http_upgrade = "websocket") {
-           set $is_ws 1;
-           proxy_pass http://127.0.0.1:3580;
+           return 301 https://$host/;           
         }
+        proxy_pass http://127.0.0.1:3580;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -22,9 +21,13 @@ server {
         proxy_set_header        X-Real-IP       $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        if ($is_ws = 0) {
-           return 301 https://$host/;
-        }
+    }
+    
+    location /ip {
+       types { }
+       default_type 'text/plain; charset=utf-8';
+       add_header XR-IPs "$proxy_add_x_forwarded_for";
+       return 200 "IPs=$proxy_add_x_forwarded_for";
     }
 
     #error_page  404              /404.html;
